app.css
body {
    background-color: #3c9e52;
}

.custom-toggler.navbar-toggler {
    border-color: red;
  } 

#pageOwner {
    font-family: 'Lato';
    font-size: 22px;
    text-transform: uppercase;
    letter-spacing: 3px;
    color: black;
}

.my_img {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 20px 0;
}

#main {
    display: flex;
    align-items: center;
    justify-content: center;
}

#project {
    font-family: 'Lato';
    text-transform: uppercase;
    color: black;
    text-decoration: none;
    padding: 2px;
    margin-right: 10px;
}

#introduction {
    display: flex;
    align-items: center;
    justify-content: center;
}

#intro {
    font-family: 'Caveat', cursive;
    font-size: xx-large;
    font-weight: 700;
    align-items: center;
}

#accounts {
    display: flex;
    align-items: center;
    justify-content: center
}

